added : chatController.js findChats
