# swagger-output.json
@@ -441,6 +441,35 @@
           }
         }
       }
+    },
+    "/chat/findChats": {
+      "get": {
+        "tags": [
+          "채팅"
+        ],
+        "description": "회원이 참여하는 채팅방 불러오기",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "419": {
+            "description": ""
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
